完成正在执映功能

--- a/src/pages/Movie/Movie.scss
+++ b/src/pages/Movie/Movie.scss
@@ -27,3 +27,11 @@
         }
     }
 }
+.movie{
+    @include flexbox(column);
+    height: 100%;
+}
+.swiperContent{
+    flex: 1;
+    overflow: auto;
+}
